--- a/.github/workflows/main_ckppeoplesuite.yml
+++ b/.github/workflows/main_ckppeoplesuite.yml
@@ -1,3 +1,6 @@
+# main_ckppeoplesuite.yml
+# Reference screenshot (for debugging): /mnt/data/2488467a-de11-4f33-8a13-7a68b4c6513f.png
+
 name: Build and deploy Python app to Azure Web App - CKPPeopleSuite
 
 on:
@@ -9,6 +12,7 @@ on:
 env:
   PYTHON_VERSION: "3.10"
   AZ_WEBAPP_NAME: "CKPPeopleSuite"
+  ZIP_NAME: "app.zip"
 
 permissions:
   contents: read
@@ -47,9 +51,12 @@ jobs:
             echo "No requirements.txt found — skipping pip install"
           fi
 
-      - name: (Optional) Collect static on runner (requires DB envs above)
+      - name: (Optional) Collect static on runner (install ad-hoc missing deps first)
         run: |
           source antenv/bin/activate
+          # install any small runtime-only packages that may be missing (add more if Kudu later reports missing modules)
+          pip install num2words || true
+
           if [ -f manage.py ]; then
             echo "Running collectstatic on runner (optional)..."
             python manage.py collectstatic --noinput || echo "collectstatic on runner failed; continuing"
@@ -57,23 +64,29 @@ jobs:
             echo "manage.py not found in repo root; skipping runner collectstatic"
           fi
 
-      - name: Upload artifact for deployment
+      - name: Create ZIP for deterministic deployment
+        run: |
+          zip -r "${{ env.ZIP_NAME }}" . -x "antenv/**" ".venv/**" "venv/**" ".git/**" ".github/**"
+          ls -lh "${{ env.ZIP_NAME }}"
+
+      - name: Upload zip artifact
         uses: actions/upload-artifact@v4
         with:
-          name: python-app
-          path: |
-            .
-            !antenv/
+          name: python-app-zip
+          path: ${{ env.ZIP_NAME }}
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact
+      - name: Download artifact (zip)
         uses: actions/download-artifact@v4
         with:
-          name: python-app
+          name: python-app-zip
           path: .
 
       - name: Login to Azure
@@ -81,13 +94,18 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: ${{ env.AZ_WEBAPP_NAME }}
-          slot-name: Production
+      - name: ZIP Deploy to Azure Web App (deterministic)
+        env:
+          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
+          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
+          ZIP_NAME: ${{ env.ZIP_NAME }}
+        run: |
+          set -euo pipefail
+          echo "Deploying ${ZIP_NAME} to ${AZ_WEBAPP_NAME}..."
+          az webapp deployment source config-zip --resource-group "$AZ_RESOURCE_GROUP" --name "$AZ_WEBAPP_NAME" --src "$ZIP_NAME"
+          echo "ZIP deploy command finished."
 
-      - name: Run migrate, collectstatic and list files via Kudu
+      - name: Run migrate & collectstatic via Kudu (tries common locations, with fallback to 'python')
         env:
           AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
           AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
@@ -98,7 +116,6 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y jq curl || true
 
-          echo "Fetching publishing profile..."
           PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
           echo "$PROFILES" > "$ART/publish_profiles.json"
           PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
@@ -106,7 +123,7 @@ jobs:
           PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
 
           if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
-            echo "Publish profile missing; aborting Kudu operations."
+            echo "Publishing profile values missing; aborting Kudu commands."
             cat "$ART/publish_profiles.json" || true
             exit 1
           fi
@@ -115,12 +132,11 @@ jobs:
             PUBLISH_URL="https://$PUBLISH_URL"
           fi
           SCM="$PUBLISH_URL"
-          echo "Kudu endpoint: $SCM"
+          echo "Kudu URL: $SCM"
 
-          # Candidate directories where manage.py might live
           DIRS=("/home/site/wwwroot" "/home/site/wwwroot/backend" "/home/site/wwwroot/src")
 
-          run_kudu_cmd() {
+          run_kudu() {
             CMD="$1"
             DIR="$2"
             SAFE=$(echo "$CMD" | tr ' /' '__' | tr -cd '[:alnum:]_')
@@ -129,18 +145,17 @@ jobs:
             SUCCESS=0
             while [ $ATTEMPT -le 4 ]; do
               echo "Attempt $ATTEMPT: $CMD (dir=$DIR)"
-              curl -s -u "$USER:$PASS" "$SCM/api/command" \
-                -H "Content-Type: application/json" \
-                -d "{\"command\":\"$CMD\",\"dir\":\"$DIR\"}" -o "$OUT" || true
-              # consider success if Kudu returned anything; we'll inspect output
+              # try with python3; fallback to python
+              PAYLOAD=$(printf '{"command":"bash -lc \"python3 manage.py %s || python manage.py %s\"","dir":"%s"}' "${CMD#python3 manage.py }" "${CMD#python3 manage.py }" "$DIR")
+              curl -s -u "$USER:$PASS" "$SCM/api/command" -H "Content-Type: application/json" -d "$PAYLOAD" -o "$OUT" || true
               if [ -s "$OUT" ]; then
                 SUCCESS=1
                 break
               fi
               ATTEMPT=$((ATTEMPT+1))
-              sleep 3
+              sleep 4
             done
-            echo "Saved output to $OUT"
+            echo "Saved Kudu output to $OUT"
             cat "$OUT" || true
             return $SUCCESS
           }
@@ -153,7 +168,7 @@ jobs:
 
           for D in "${DIRS[@]}"; do
             if [ $MIGRATE_DONE -eq 0 ]; then
-              if run_kudu_cmd "$MIGRATE_CMD" "$D"; then
+              if run_kudu "$MIGRATE_CMD" "$D"; then
                 MIGRATE_DONE=1
                 echo "migrate succeeded in $D"
               else
@@ -161,7 +176,7 @@ jobs:
               fi
             fi
             if [ $COLLECT_DONE -eq 0 ]; then
-              if run_kudu_cmd "$COLLECT_CMD" "$D"; then
+              if run_kudu "$COLLECT_CMD" "$D"; then
                 COLLECT_DONE=1
                 echo "collectstatic succeeded in $D"
               else
@@ -174,13 +189,12 @@ jobs:
           done
 
           if [ $MIGRATE_DONE -eq 0 ]; then
-            echo "Warning: migrate did not succeed in any candidate directory."
+            echo "Warning: migrate did not succeed in any candidate dir."
           fi
           if [ $COLLECT_DONE -eq 0 ]; then
-            echo "Warning: collectstatic did not succeed in any candidate directory."
+            echo "Warning: collectstatic did not succeed in any candidate dir."
           fi
 
-          # list files in wwwroot and staticfiles for verification
           curl -s -u "$USER:$PASS" "$SCM/api/vfs/site/wwwroot/" -o "$ART/wwwroot.json" || true
           curl -s -u "$USER:$PASS" "$SCM/api/vfs/site/wwwroot/staticfiles" -o "$ART/staticfiles.json" || true
           echo "Saved file lists to $ART"
@@ -198,4 +212,4 @@ jobs:
         run: |
           az webapp restart --resource-group "$AZ_RESOURCE_GROUP" --name "$AZ_WEBAPP_NAME"
 
-# Reference screenshot (uploaded): /mnt/data/2488467a-de11-4f33-8a13-7a68b4c6513f.png
+# Reference screenshot: /mnt/data/2488467a-de11-4f33-8a13-7a68b4c6513f.png
