--- a/.github/workflows/main_ckppeoplesuite.yml
+++ b/.github/workflows/main_ckppeoplesuite.yml
@@ -9,6 +9,7 @@ on:
 env:
   PYTHON_VERSION: "3.10"
   AZ_WEBAPP_NAME: "CKPPeopleSuite"
+  REFERENCE_SCREENSHOT: "/mnt/data/2488467a-de11-4f33-8a13-7a68b4c6513f.png" # local file path you uploaded
 
 permissions:
   contents: read
@@ -47,21 +48,19 @@ jobs:
             echo "No requirements.txt found — skipping pip install"
           fi
 
-      - name: (Optional) Collect static on runner (install missing deps first)
+      - name: (Optional) Collect static on runner (install known missing deps first)
         run: |
           set -e
           source antenv/bin/activate
-          # ensure num2words is available (quick fix for ModuleNotFoundError seen in CI)
-          echo "Ensuring known missing package 'num2words' is installed..."
+          # quick-install known missing package to let Django import apps during collectstatic
           python -m pip install num2words || true
 
           if [ -f manage.py ]; then
             echo "Running collectstatic on runner (optional)..."
-            # run collectstatic and capture output; if it fails show pip freeze to diagnose missing packages
             if ! python manage.py collectstatic --noinput; then
               echo "collectstatic failed — dumping pip freeze for debugging:"
               python -m pip freeze || true
-              echo "collectstatic on runner failed; continuing (Kudu will try collectstatic after deploy)."
+              echo "collectstatic on runner failed; continuing"
             fi
           else
             echo "manage.py not found in repo root; skipping runner collectstatic"
@@ -97,7 +96,7 @@ jobs:
           app-name: ${{ env.AZ_WEBAPP_NAME }}
           slot-name: Production
 
-      - name: Run migrate, collectstatic and list files via Kudu
+      - name: Kudu: Run migrate (separate step)
         env:
           AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
           AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
@@ -107,14 +106,14 @@ jobs:
           mkdir -p "$ART"
           sudo apt-get update -y
           sudo apt-get install -y jq curl || true
-          echo "Fetching publishing profile..."
+          echo "Fetching publishing profile for migrate..."
           PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
           echo "$PROFILES" > "$ART/publish_profiles.json"
           PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
           USER=$(echo "$PROFILES" | jq -r '.[0].userName // empty')
           PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
           if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
-            echo "Publish profile missing; aborting Kudu operations."
+            echo "Publish profile missing; aborting migrate."
             cat "$ART/publish_profiles.json" || true
             exit 1
           fi
@@ -122,68 +121,100 @@ jobs:
             PUBLISH_URL="https://$PUBLISH_URL"
           fi
           SCM="$PUBLISH_URL"
-          echo "Kudu endpoint: $SCM"
-          # Candidate directories where manage.py might live
+          echo "Kudu migrate endpoint: $SCM"
           DIRS=("/home/site/wwwroot" "/home/site/wwwroot/backend" "/home/site/wwwroot/src")
-          run_kudu_cmd() {
-            CMD="$1"
-            DIR="$2"
-            SAFE=$(echo "$CMD" | tr ' /' '__' | tr -cd '[:alnum:]_')
-            OUT="$ART/${SAFE}_$(basename "$DIR").json"
-            ATTEMPT=1
-            SUCCESS=0
-            while [ $ATTEMPT -le 4 ]; do
-              echo "Attempt $ATTEMPT: $CMD (dir=$DIR)"
-              curl -s -u "$USER:$PASS" "$SCM/api/command" \
-                -H "Content-Type: application/json" \
-                -d "{\"command\":\"$CMD\",\"dir\":\"$DIR\"}" -o "$OUT" || true
-              # consider success if Kudu returned anything; we'll inspect output
-              if [ -s "$OUT" ]; then
-                SUCCESS=1
-                break
-              fi
-              ATTEMPT=$((ATTEMPT+1))
-              sleep 3
-            done
-            echo "Saved output to $OUT"
-            cat "$OUT" || true
-            return $SUCCESS
-          }
           MIGRATE_CMD="python3 manage.py migrate --noinput"
-          COLLECT_CMD="python3 manage.py collectstatic --noinput"
           MIGRATE_DONE=0
-          COLLECT_DONE=0
           for D in "${DIRS[@]}"; do
-            if [ $MIGRATE_DONE -eq 0 ]; then
-              if run_kudu_cmd "$MIGRATE_CMD" "$D"; then
-                MIGRATE_DONE=1
-                echo "migrate succeeded in $D"
-              else
-                echo "migrate failed in $D"
-              fi
-            fi
-            if [ $COLLECT_DONE -eq 0 ]; then
-              if run_kudu_cmd "$COLLECT_CMD" "$D"; then
-                COLLECT_DONE=1
-                echo "collectstatic succeeded in $D"
-              else
-                echo "collectstatic failed in $D"
-              fi
-            fi
-            if [ $MIGRATE_DONE -eq 1 ] && [ $COLLECT_DONE -eq 1 ]; then
+            echo "Trying migrate in $D ..."
+            OUT="$ART/migrate_$(basename "$D").json"
+            curl -s -u "$USER:$PASS" "$SCM/api/command" -H "Content-Type: application/json" -d "{\"command\":\"$MIGRATE_CMD\",\"dir\":\"$D\"}" -o "$OUT" || true
+            echo "migrate output for $D:"
+            cat "$OUT" || true
+            # success heuristics: non-empty output and ExitCode 0 or Output contains something
+            if grep -q '"ExitCode":0' "$OUT" 2>/dev/null || grep -q '"Output":' "$OUT" 2>/dev/null && ! grep -q 'No such file or directory' "$OUT" 2>/dev/null; then
+              MIGRATE_DONE=1
+              echo "migrate appears to have succeeded in $D"
               break
             fi
+            echo "migrate failed in $D; trying next candidate."
           done
           if [ $MIGRATE_DONE -eq 0 ]; then
-            echo "Warning: migrate did not succeed in any candidate directory."
+            echo "Warning: migrate did not succeed in any candidate directory. Inspect $ART/*.json"
           fi
+
+      - name: Kudu: Run collectstatic (separate step)
+        env:
+          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
+          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
+        run: |
+          set -euo pipefail
+          ART="$GITHUB_WORKSPACE/deploy-artifacts"
+          mkdir -p "$ART"
+          echo "Fetching publishing profile for collectstatic..."
+          PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
+          echo "$PROFILES" > "$ART/publish_profiles.json"
+          PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
+          USER=$(echo "$PROFILES" | jq -r '.[0].userName // empty')
+          PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
+          if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
+            echo "Publish profile missing; aborting collectstatic."
+            cat "$ART/publish_profiles.json" || true
+            exit 1
+          fi
+          if [[ ! "$PUBLISH_URL" =~ ^https?:// ]]; then
+            PUBLISH_URL="https://$PUBLISH_URL"
+          fi
+          SCM="$PUBLISH_URL"
+          echo "Kudu collectstatic endpoint: $SCM"
+          DIRS=("/home/site/wwwroot" "/home/site/wwwroot/backend" "/home/site/wwwroot/src")
+          COLLECT_CMD="python3 manage.py collectstatic --noinput"
+          COLLECT_DONE=0
+          for D in "${DIRS[@]}"; do
+            echo "Trying collectstatic in $D ..."
+            OUT="$ART/collect_$(basename "$D").json"
+            curl -s -u "$USER:$PASS" "$SCM/api/command" -H "Content-Type: application/json" -d "{\"command\":\"$COLLECT_CMD\",\"dir\":\"$D\"}" -o "$OUT" || true
+            echo "collectstatic output for $D:"
+            cat "$OUT" || true
+            if grep -q '"ExitCode":0' "$OUT" 2>/dev/null || grep -q '"Output":' "$OUT" 2>/dev/null && ! grep -q 'No such file or directory' "$OUT" 2>/dev/null; then
+              COLLECT_DONE=1
+              echo "collectstatic appears to have succeeded in $D"
+              break
+            fi
+            echo "collectstatic failed in $D; trying next candidate."
+          done
           if [ $COLLECT_DONE -eq 0 ]; then
-            echo "Warning: collectstatic did not succeed in any candidate directory."
+            echo "Warning: collectstatic did not succeed in any candidate directory. Inspect $ART/*.json"
           fi
-          # list files in wwwroot and staticfiles for verification
+
+      - name: Kudu: List deployed files (separate step)
+        env:
+          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
+          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
+        run: |
+          set -euo pipefail
+          ART="$GITHUB_WORKSPACE/deploy-artifacts"
+          mkdir -p "$ART"
+          echo "Fetching publishing profile for listing..."
+          PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
+          echo "$PROFILES" > "$ART/publish_profiles.json"
+          PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
+          USER=$(echo "$PROFILES" | jq -r '.[0].userName // empty')
+          PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
+          if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
+            echo "Publish profile missing; aborting listing."
+            cat "$ART/publish_profiles.json" || true
+            exit 1
+          fi
+          if [[ ! "$PUBLISH_URL" =~ ^https?:// ]]; then
+            PUBLISH_URL="https://$PUBLISH_URL"
+          fi
+          SCM="$PUBLISH_URL"
+          echo "Listing /home/site/wwwroot ..."
           curl -s -u "$USER:$PASS" "$SCM/api/vfs/site/wwwroot/" -o "$ART/wwwroot.json" || true
+          echo "Listing /home/site/wwwroot/staticfiles ..."
           curl -s -u "$USER:$PASS" "$SCM/api/vfs/site/wwwroot/staticfiles" -o "$ART/staticfiles.json" || true
-          echo "Saved file lists to $ART"
+          echo "Saved wwwroot.json and staticfiles.json to $ART"
 
       - name: Upload deployed-file-lists artifacts
         uses: actions/upload-artifact@v4
